--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,7 +7,6 @@ section {
   padding: 10px;
   padding-top: 50px;
   margin-left: 180px; /* Keep contents away from side nav */
-  position: relative;
 }
 
 p {
@@ -23,6 +22,11 @@ input {
 
 select {
   font-size: 20px;
+}
+
+.welcome-container {
+  top: 30px;
+  position: relative;
 }
 
 .welcome {
